<resources>
    <string name="app_name">The For Loop Restaurant App</string>
    <string name="restaurant_reservation_application">Restaurant Reservation Application</string>

    <string name="question1">Which employee is assigned to this table?</string>
    <string name="question2">What is the Status of the table?</string>
    <string name="question3">Is this table be reserved?</string>

    <string name="time">Estimated time</string>

    <string name="update">Update Table</string>
    <string name="dirty">Dirty</string>
    <string name="open">Open</string>
    <string name="closed">Taken</string>
    <string name="reserved">Reserved</string>
    <string name ="howTo">How to use.</string>

    <string name="help_instructions">When your shift starts, select the floor that you are assigned. Click on a table to open seating menu, then select desired status of table. The table will changed colors based on the button selected. When your shift is over press the back button to exit and clear tables for next shift.</string>
    <string name="help_button">Help</string>
    <string name="back_button">Back</string>


    <string name="t10">T10</string>
    <string name="t9">T9</string>
    <string name="t8">T8</string>
    <string name="t7">T7</string>
    <string name="t6">T6</string>
    <string name="t5">T5</string>
    <string name="t4">T4</string>
    <string name="t3">T3</string>
    <string name="t2">T2</string>
    <string name="t1">T1</string>

    <string name="hello_welcome_to_our_restaurant">Hello Welcome to our Restaurant!</string>

    <string name="choose_color">Choose a color:</string>
    <string name="color_button">Change Color</string>
    <string name="patio">Patio</string>
    <string name="floor_2">Floor 2</string>
    <string name="floor_1">Floor 1</string>
</resources>