<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Clicked">


    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:freezesText="true"
        android:textSize="23dp"
        />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question1"
        android:layout_marginBottom="15dp"
        android:ems="5"
        android:hint="Nick"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textSize="23dp"
        android:layout_below="@id/answer1"
        />

    <RadioGroup
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question2"
        android:orientation="vertical">


        <RadioButton
            android:id="@+id/dirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question2"
            android:onClick="onColorSelected"
            android:text="@string/dirty" />

            <RadioButton
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question2"
            android:layout_toRightOf="@+id/dirty"
            android:text="@string/open"
            android:onClick="onColorSelected"
            />

            <RadioButton
            android:id="@+id/reserved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question2"
            android:layout_toRightOf="@+id/open"
            android:text="@string/reserved"
            android:onClick="onColorSelected"
            />
         <RadioButton
            android:id="@+id/closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question2"
            android:layout_toRightOf="@+id/reserved"
            android:text="@string/closed"
            android:onClick="onColorSelected"
            />
    </RadioGroup>



</RelativeLayout>