<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/floor2bb"
    tools:context=".floor2Activity">

    <Button
        android:id="@+id/button11"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="517dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t10"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="194dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t6"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button10"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="466dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t9"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="58dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="156dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t7"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button9"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="60dp"
        android:layout_height="51dp"
        android:layout_marginStart="321dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="175dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t8"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="59dp"
        android:layout_height="54dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="276dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t4"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="266dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t5"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="364dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t1"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="321dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t3"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginStart="321dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="365dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/arbutus"
        android:onClick="onClick"
        android:text="@string/t2"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>