<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainfloorbg"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#706C6C"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="170dp">

        <Button
            android:id="@+id/button52"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_marginStart="126dp"
            android:layout_marginTop="378dp"
            android:layout_marginEnd="229dp"
            android:layout_marginBottom="177dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/arbutus"
            android:onClick="onClick"
            android:text="@string/t3"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button45"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:layout_marginStart="359dp"
            android:layout_marginTop="237dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="341dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button40"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="141dp"
            android:layout_marginTop="237dp"
            android:layout_marginEnd="244dp"
            android:layout_marginBottom="340dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button41"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="237dp"
            android:layout_marginEnd="201dp"
            android:layout_marginBottom="340dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button42"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginStart="229dp"
            android:layout_marginTop="237dp"
            android:layout_marginEnd="157dp"
            android:layout_marginBottom="340dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button43"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:layout_marginStart="269dp"
            android:layout_marginTop="237dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="341dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button44"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:layout_marginStart="314dp"
            android:layout_marginTop="237dp"
            android:layout_marginEnd="71dp"
            android:layout_marginBottom="341dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button1"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginStart="99dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="284dp"
            android:layout_marginBottom="560dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button50"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginStart="99dp"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="284dp"
            android:layout_marginBottom="376dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button49"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginStart="99dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="284dp"
            android:layout_marginBottom="411dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button48"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginStart="99dp"
            android:layout_marginTop="133dp"
            android:layout_marginEnd="284dp"
            android:layout_marginBottom="448dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button47"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginStart="99dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="284dp"
            android:layout_marginBottom="485dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button46"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginStart="99dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="284dp"
            android:layout_marginBottom="523dp"
            android:backgroundTint="@color/green"
            android:onClick="onClick"
            android:state_focused="false"
            android:text="@string/t1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="278dp"
            android:layout_marginBottom="265dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/arbutus"
            android:onClick="onClick"
            android:text="@string/t1"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button56"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="57dp"
            android:layout_height="47dp"
            android:layout_marginStart="179dp"
            android:layout_marginTop="511dp"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="44dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/arbutus"
            android:onClick="onClick"
            android:text="@string/t7"
            android:textColor="#FDFAFA"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button55"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="458dp"
            android:layout_marginEnd="317dp"
            android:layout_marginBottom="98dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/arbutus"
            android:onClick="onClick"
            android:text="@string/t6"
            android:textColor="#F3EFEF"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button54"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="58dp"
            android:layout_height="49dp"
            android:layout_marginStart="243dp"
            android:layout_marginTop="426dp"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="128dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/arbutus"
            android:onClick="onClick"
            android:text="@string/t5"
            android:textColor="#F6F3F3"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button53"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="57dp"
            android:layout_height="50dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="354dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="199dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/arbutus"
            android:onClick="onClick"
            android:text="@string/t4"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button51"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_marginStart="229dp"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="124dp"
            android:layout_marginBottom="265dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/arbutus"
            android:onClick="onClick"
            android:text="@string/t2"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>